src/objects/KS_Conf_Organizacion_Cliente__mdt.object
<CustomObject>
    <fields>
        <fullName>KS_Canal_SAP__c</fullName>
        <label>Canal SAP</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Lista_de_precios__c</fullName>
        <label>Lista de precios</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Organizacion_de_ventas__c</fullName>
        <label>Organizacion de ventas</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Sector__c</fullName>
        <label>Sector</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Organizacion Cliente</label>
    <pluralLabel>Organizaciones Clientes</pluralLabel>
</CustomObject>